--- a/src/less/App.less
+++ b/src/less/App.less
@@ -1,3 +1,6 @@
 body * {
     font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
 }
+.active-link {
+    font-weight: bold;
+}
